[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-rt = "2.8.0"
actix-web = "4.3.0"
actix-ws = "0.2.5"
bytestring = "1.3.0"
dotenv = "0.15.0"
rand = "0.8.5"
serde = {version="1.0.152", features=["derive"]}
serde_json = "1.0.93"
sqlx = {version="0.6.2", features=['runtime-async-std-native-tls', 'postgres']}
tokio = "1.26.0"
